--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "final-form": "^4.20.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-final-form": "^6.5.9",
     "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.3.0",
     "recharts": "^2.1.10",
